Dockerized app for production
